<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ThemeVerse">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sem_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:hint="@string/today_verse"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/sem_narration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/narration"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryLight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/sem_name"
                    android:layout_width="0dp"
                    android:gravity="end"
                    android:layout_marginEnd="4dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:hint="@string/semester_name"
                    android:layout_marginRight="4dp" />

                <TextView
                    android:id="@+id/sem_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:gravity="start"
                    android:hint="@string/year" />

                <TextView
                    android:id="@+id/sem_version"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight=".2"
                    android:gravity="end"
                    android:hint="@string/version"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryLight"
        app:menu="@menu/bottom_navigation" />

</RelativeLayout>