<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/today_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/notice_date"
            android:textColor="@color/colorSecondaryAccent" />

        <TextView
            android:id="@+id/today_verse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/today_verse"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/today_narration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/narration" />

        <TextView
            android:id="@+id/today_thought"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/narration" />

        <TextView
            android:id="@+id/today_prayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/narration" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/colorAccent" />
    </LinearLayout>

</ScrollView>